...
                android:textColorLink="@android:color/holo_orange_dark"
                android:textDirection="firstStrongRtl"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="50dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/orange"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="Expense"
                    android:textColor="@android:color/background_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/expenseCatList"
...
